force-app/main/default/objects/Business_Assessment__c/fields/Economic_Group_Client_Country_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>Economic_Group_Client_Country_of_Risk__c</fullName>
    <description>The country that the Economic Group Parent Client has the most credit risk exposure</description>
    <formula>IF(NOT(ISBLANK( Account__r.Economic_Group_Parent__c )),TEXT(Account__r.Economic_Group_Parent__r.Country_Risk__c), TEXT(Account__r.Country_Risk__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Economic Group Parent Client&apos;s specific country of risk exposure</inlineHelpText>
    <label>Economic Group Client Country of Risk</label>
    <type>Text</type>
</CustomField>