force-app/main/default/objects/Business_Assessment__c/fields/Economic_Group_Client_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Economic_Group_Client_Risk_Rating__c</fullName>
    <description>Standard Bank Internal Risk Rating for the Economic Group Parent Client from Credit Risk (Source: CRS)</description>
    <formula>IF(NOT(ISBLANK( Account__r.Economic_Group_Parent__c )),TEXT(Account__r.Economic_Group_Parent__r.Internal_Credit_Rating__c), TEXT(Account__r.Internal_Credit_Rating__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Standard Bank Internal Risk Rating for the Economic Group Parent Client from Credit Risk</inlineHelpText>
    <label>Economic Group Client Risk Rating</label>
    <type>Text</type>
</CustomField>