force-app/main/default/objects/Business_Assessment__c/fields/Economic_Group_Client_Sector__c.field-meta.xml
<CustomField>
    <fullName>Economic_Group_Client_Sector__c</fullName>
    <description>The primary sector in which the Economic Group Parent Client operates. This field is used in CRT and MI reporting</description>
    <formula>IF(NOT(ISBLANK( Account__r.Economic_Group_Parent__c )),TEXT(Account__r.Economic_Group_Parent__r.Client_Sector__c), TEXT(Account__r.Client_Sector__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The primary sector in which the Economic Group Parent Client operates</inlineHelpText>
    <label>Economic Group Client Sector</label>
    <type>Text</type>
</CustomField>