force-app/main/default/objects/Business_Assessment__c/fields/Economic_Group_Client_Sector_Temp__c.field-meta.xml
<CustomField>
    <fullName>Economic_Group_Client_Sector_Temp__c</fullName>
    <description>The primary sector in which the Economic Group Parent Client operates. This field is used in CRT and MI reporting.</description>
    <inlineHelpText>The sub-sector further defines the sector in which the Economic Group Parent Client operates</inlineHelpText>
    <label>Economic Group Client Sector</label>
    <length>50</length>
    <type>Text</type>
</CustomField>