force-app/main/default/objects/Business_Assessment__c/fields/Economic_Group_Parent_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Economic_Group_Parent_Client_Id__c</fullName>
    <formula>Account__r.Economic_Group_Parent_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Economic Group Parent Client Id</label>
    <type>Text</type>
</CustomField>