force-app/main/default/objects/Business_Assessment__c/fields/Economic_Group_Parent_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Economic_Group_Parent_Client_Name__c</fullName>
    <description>Group parent client for the economic group client hierarchy as represented in credit risk (Source: Adaptiv)</description>
    <formula>Account__r.Economic_Group_Parent_Client_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Group parent client for the economic group client hierarchy as represented in credit risk</inlineHelpText>
    <label>Economic Group Parent Client Name</label>
    <type>Text</type>
</CustomField>