force-app/main/default/objects/Business_Assessment__c/fields/Economic_Group_Parent_Credit_Limits__c.field-meta.xml
<CustomField>
    <fullName>Economic_Group_Parent_Credit_Limits__c</fullName>
    <description>The value of the economic groups’ existing total credit limits. Includes all entities part of the economic group but not including the legal and risk taking view</description>
    <inlineHelpText>The value of the economic groups’ existing total credit limits. Includes all entities part of the economic group but not including the legal and risk taking view</inlineHelpText>
    <label>Economic Group Parent Credit Limits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>