force-app/main/default/objects/Business_Assessment__c/fields/EDD_PEP__c.field-meta.xml
<CustomField>
    <fullName>EDD_PEP__c</fullName>
    <description>Have there been any PEPS identified in relation to the client? If there are PEPS involved, has this been tabled at the relevant High Risk Committee.</description>
    <inlineHelpText>Have there been any PEPS identified in relation to the client? If there are PEPS involved, has this been tabled at the relevant High Risk Committee.</inlineHelpText>
    <label>EDD &amp; PEP</label>
    <length>60</length>
    <type>Text</type>
</CustomField>