force-app/main/default/objects/Business_Assessment__c/fields/Entities_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Entities_Risk_Rating__c</fullName>
    <description>US-3214</description>
    <label>Entities&apos; Risk Rating</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>