force-app/main/default/objects/Business_Assessment__c/fields/Environmental_Social_Risks_Tool__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Social_Risks_Tool__c</fullName>
    <formula>HYPERLINK(&quot;https://cib.appstore.standardbank.co.za/es-screening-tool/dashboard&quot;, &quot;Please access the Environmental / Social Risk Tool to generate a client and transaction risk rating&quot;,&quot;_blank&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Environmental/Social Risks Tool to generate a client and transaction risk rating</inlineHelpText>
    <label>Environmental / Social Risks Tool</label>
    <type>Text</type>
</CustomField>