force-app/main/default/objects/Business_Assessment__c/fields/Export_Credit_Agency__c.field-meta.xml
<CustomField>
    <fullName>Export_Credit_Agency__c</fullName>
    <description>US-3690</description>
    <inlineHelpText>Name of the Export Credit Agency</inlineHelpText>
    <label>Export Credit Agency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>