force-app/main/default/objects/Business_Assessment__c/fields/GCCR_Status__c.field-meta.xml
<CustomField>
    <fullName>GCCR_Status__c</fullName>
    <description>Has the deal been submitted for conflicts clearance to the Compliance Control Room? Yes/No Remember that every single deal, whether it is a refinance or overdraft facility needs to be sent to the CCR for the necessary clearance. Even if you have obtained conflicts clearance, please disclose any potential conflicts that the deal team is aware of (if any).</description>
    <inlineHelpText>Has the deal been submitted for conflicts clearance to the CCR? Every single deal needs to be sent to the CCR for clearance. If conflicts clearance has been obtained, please disclose any potential conflicts that the deal team is aware of (if any).</inlineHelpText>
    <label>GCCR Status</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>