force-app/main/default/objects/Business_Assessment__c/fields/Gearing_Metric__c.field-meta.xml
<CustomField>
    <fullName>Gearing_Metric__c</fullName>
    <label>Gearing Metric</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Debt to EBITDA (Gross)</fullName>
            </value>
            <value>
                <fullName>Debt to EBITDA (Net)</fullName>
            </value>
            <value>
                <fullName>Debt to Equity</fullName>
            </value>
            <value>
                <fullName>Cash Conversion Cycle (Days)</fullName>
            </value>
            <value>
                <fullName>Loan-to-Value</fullName>
            </value>
            <value>
                <fullName>Current Ratio</fullName>
            </value>
            <value>
                <fullName>Tangible Equity</fullName>
            </value>
            <value>
                <fullName>EBITDA Interest Cover</fullName>
            </value>
            <value>
                <fullName>FFO to Total Debt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>