force-app/main/default/objects/Business_Assessment__c/fields/Global_Markets_CY_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Global_Markets_CY_Revenue__c</fullName>
    <description>Revenue generated for the Bank from the Client Group over the current year for Global Markets</description>
    <inlineHelpText>Revenue generated for the Bank from the Client Group over the current year for Global Markets</inlineHelpText>
    <label>Global Markets CY Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>