force-app/main/default/objects/Business_Assessment__c/fields/GM_Share_of_Wallet_Existing_SBG__c.field-meta.xml
<CustomField>
    <fullName>GM_Share_of_Wallet_Existing_SBG__c</fullName>
    <description>Estimated percentage share of the Client&apos;s spend Standard Bank has within Global Markets</description>
    <inlineHelpText>Estimated percentage share of the Client&apos;s spend Standard Bank has within Global Markets</inlineHelpText>
    <label>GM Share of Wallet (Existing) SBG %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>