force-app/main/default/objects/Business_Assessment__c/fields/Group_Parent_CCBM__c.field-meta.xml
<CustomField>
    <fullName>Group_Parent_CCBM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field was created mainly for the prupose of email notification US-2441</description>
    <label>Group Parent CCBM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CCBMBusiness_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>