force-app/main/default/objects/Business_Assessment__c/fields/Group_Parent_CIF_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Parent_CIF_Number__c</fullName>
    <description>CIF number of the Group Parent Client</description>
    <formula>IF(NOT(ISBLANK( Account__r.Economic_Group_Parent__c )),Account__r.Economic_Group_Parent__r.CIF__c, Account__r.CIF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CIF number of the Group Parent Client</inlineHelpText>
    <label>Group Parent CIF Number</label>
    <type>Text</type>
</CustomField>