force-app/main/default/objects/Business_Assessment__c/fields/Group_Parent_CIF_Reporting_Country__c.field-meta.xml
<CustomField>
    <fullName>Group_Parent_CIF_Reporting_Country__c</fullName>
    <description>A Client&apos;s Group Parent Country used for monthly reporting</description>
    <formula>IF(NOT(ISBLANK( Account__r.Economic_Group_Parent__c )),Account__r.Economic_Group_Parent__r.Group_Parent_Reporting_Country__c, Account__r.Group_Parent_Reporting_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A Client&apos;s Group Parent Country used for monthly reporting</inlineHelpText>
    <label>Group Parent CIF Reporting Country</label>
    <type>Text</type>
</CustomField>