force-app/main/default/objects/Business_Assessment__c/fields/Group_Parent_CIF_Reporting_Franco__c.field-meta.xml
<CustomField>
    <fullName>Group_Parent_CIF_Reporting_Franco__c</fullName>
    <description>Reporting Franco of a Client&apos;s Group Parent</description>
    <formula>IF(NOT(ISBLANK( Account__r.Economic_Group_Parent__c )),Account__r.Economic_Group_Parent__r.Group_Parent_Reporting_Franco__c, Account__r.Group_Parent_Reporting_Franco__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reporting Franco of a Client&apos;s Group Parent</inlineHelpText>
    <label>Group Parent CIF Reporting Franco</label>
    <type>Text</type>
</CustomField>