force-app/main/default/objects/Business_Assessment__c/fields/Group_Parent_Client_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Group_Parent_Client_Coordinator__c</fullName>
    <description>Client Coordinator of the Group Parent Client</description>
    <formula>IF(NOT(ISBLANK( Account__r.Economic_Group_Parent__c )),Account__r.Economic_Group_Parent__r.Group_Parent_Client_Coordinator__c, Account__r.Group_Parent_Client_Coordinator__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Client Coordinator of the Group Parent Client</inlineHelpText>
    <label>Group Parent Client Coordinator</label>
    <type>Text</type>
</CustomField>