force-app/main/default/objects/Business_Assessment__c/fields/Group_Parent_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Parent_Client_Name__c</fullName>
    <description>Group Parent Client Name used for email notification</description>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Parent Client Name</label>
    <type>Text</type>
</CustomField>