force-app/main/default/objects/Business_Assessment__c/fields/Group_Parent_IBC_Target_Client__c.field-meta.xml
<CustomField>
    <fullName>Group_Parent_IBC_Target_Client__c</fullName>
    <description>This Group Parent client was identified during the budget process.</description>
    <formula>IF(NOT(ISBLANK( Account__r.Economic_Group_Parent__c )),Account__r.Economic_Group_Parent__r.Group_Parent_CIB_Target_Client__c, Account__r.Group_Parent_CIB_Target_Client__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This Group Parent Client was identified as an Individually Budgeted Client (IBC) during the budget process.</inlineHelpText>
    <label>Group Parent IBC Target Client</label>
    <type>Checkbox</type>
</CustomField>