force-app/main/default/objects/Business_Assessment__c/fields/Guarantor_Gearing_PreTransaction__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Gearing_PreTransaction__c</fullName>
    <description>Value applicable to selected Gearing Metric Type</description>
    <inlineHelpText>Value applicable to selected Gearing Metric Type</inlineHelpText>
    <label>Guarantor Gearing Pre-Transaction</label>
    <length>32</length>
    <type>Text</type>
</CustomField>