force-app/main/default/objects/Business_Assessment__c/fields/Guarantor_LGD__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_LGD__c</fullName>
    <inlineHelpText>As agreed with Credit</inlineHelpText>
    <label>Guarantor LGD (%)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>