force-app/main/default/objects/Business_Assessment__c/fields/Guarantor_LGD_Type__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_LGD_Type__c</fullName>
    <label>Guarantor LGD Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SARB Model</fullName>
            </value>
            <value>
                <fullName>Revised Credit Model</fullName>
            </value>
            <value>
                <fullName>Specialised Lending Model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>