force-app/main/default/objects/Business_Assessment__c/fields/Guarantor_Name__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Client providing the guarantee for the credit</description>
    <inlineHelpText>Name of the Client providing the guarantee for the credit</inlineHelpText>
    <label>Guarantor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Guarantees</relationshipLabel>
    <relationshipName>Guarantees</relationshipName>
    <type>Lookup</type>
</CustomField>