force-app/main/default/objects/Business_Assessment__c/fields/Guarantor_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Risk_Rating__c</fullName>
    <description>Standard Bank Internal Risk Rating for the Guarantor from Credit Risk (Source: CRS)</description>
    <formula>Text(Guarantor_Name__r.Internal_Credit_Rating__c)</formula>
    <inlineHelpText>Standard Bank Internal Risk Rating for the Guarantor from Credit Risk</inlineHelpText>
    <label>Guarantor Risk Rating</label>
    <type>Text</type>
</CustomField>