force-app/main/default/objects/Business_Assessment__c/fields/HasDocument__c.field-meta.xml
<CustomField>
    <fullName>HasDocument__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-3316 - field used in validation rule that checks if NBAC Joint Venture record has any file</description>
    <label>HasDocument</label>
    <type>Checkbox</type>
</CustomField>