force-app/main/default/objects/Business_Assessment__c/fields/IB_Share_of_Wallet_Existing_Total__c.field-meta.xml
<CustomField>
    <fullName>IB_Share_of_Wallet_Existing_Total__c</fullName>
    <description>Estimated share of the Client&apos;s spend Standard Bank has within Investment Banking</description>
    <inlineHelpText>Estimated share of the Client&apos;s spend Standard Bank has within Investment Banking</inlineHelpText>
    <label>IB Share of Wallet (Existing) Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>