force-app/main/default/objects/Business_Assessment__c/fields/Indicator_Completed_Count__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Completed_Count__c</fullName>
    <label>Indicator Completed Count</label>
    <summaryFilterItems>
        <field>NBAC_Financial_Analysis__c.Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NBAC_Financial_Analysis__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Indicator</value>
    </summaryFilterItems>
    <summaryForeignKey>NBAC_Financial_Analysis__c.Business_Assessment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>