force-app/main/default/objects/Business_Assessment__c/fields/Investment_Banking_CY_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Investment_Banking_CY_Revenue__c</fullName>
    <description>Revenue generated for the Bank from the Client Group over the current year for Investment Banking</description>
    <inlineHelpText>Revenue generated for the Bank from the Client Group over the current year for Investment Banking</inlineHelpText>
    <label>Investment Banking CY Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>