force-app/main/default/objects/Business_Assessment__c/fields/KYC_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Status__c</fullName>
    <description>US-3690 Is KYC in place in each required jurisdiction? In the event not completed, the current status in each jurisdiction. If the KYC relates to a new client, confirmation that KYC is yet to be completed.</description>
    <inlineHelpText>Is KYC in place in each required jurisdiction? In the event not completed, the current status in each jurisdiction. If the KYC relates to a new client, confirmation that KYC is yet to be completed.</inlineHelpText>
    <label>KYC Status</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>