force-app/main/default/objects/Business_Assessment__c/fields/Listed_Instruments__c.field-meta.xml
<CustomField>
    <fullName>Listed_Instruments__c</fullName>
    <description>Any listed comparable used as pricing points e.g. bonds, private placements</description>
    <inlineHelpText>Any listed comparable used as pricing points e.g. bonds, private placements</inlineHelpText>
    <label>Listed Instruments</label>
    <type>TextArea</type>
</CustomField>