force-app/main/default/objects/Business_Assessment__c/fields/LockDate__c.field-meta.xml
<CustomField>
    <fullName>LockDate__c</fullName>
    <description>Indicates the time when record was locked from editing by a user ( LockedBy )</description>
    <label>LockDate</label>
    <type>DateTime</type>
</CustomField>