force-app/main/default/objects/Business_Assessment__c/fields/LockedBy__c.field-meta.xml
<CustomField>
    <fullName>LockedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents user who has exclusive access for record editing.</description>
    <label>LockedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Assessments1</relationshipName>
    <type>Lookup</type>
</CustomField>