force-app/main/default/objects/Business_Assessment__c/fields/Mandated_Lead_Arranger__c.field-meta.xml
<CustomField>
    <fullName>Mandated_Lead_Arranger__c</fullName>
    <description>Leader of the deal from the Lenders side.</description>
    <inlineHelpText>Other Lenders expected to be included in the Lender Group, e.g.: RMB, Barclays, Standard Chartered.</inlineHelpText>
    <label>Mandated Lead Arranger</label>
    <type>TextArea</type>
</CustomField>