force-app/main/default/objects/Business_Assessment__c/fields/Market_Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Market_Deal_Size__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[SFP-6318] - Sum of Facility Size of products on the associated opportunities.</description>
    <inlineHelpText>Sum of Facility Size of products on the associated opportunities.</inlineHelpText>
    <label>Market Deal Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>