force-app/main/default/objects/Business_Assessment__c/fields/Max_Transaction_Gearing__c.field-meta.xml
<CustomField>
    <fullName>Max_Transaction_Gearing__c</fullName>
    <description>US-3690</description>
    <inlineHelpText>Debt to equity ratio</inlineHelpText>
    <label>Max Transaction Gearing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>