force-app/main/default/objects/Business_Assessment__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <label>Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transaction Overview</fullName>
                <default>true</default>
                <label>Transaction Overview</label>
            </value>
            <value>
                <fullName>Stakeholder Contribution</fullName>
            </value>
            <value>
                <fullName>Finalisation</fullName>
            </value>
            <value>
                <fullName>Supported</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>