force-app/main/default/objects/Business_Assessment__c/fields/MNPI__c.field-meta.xml
<CustomField>
    <fullName>MNPI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether there is an MNPI opportunity included on the NBAC</description>
    <inlineHelpText>Indicates whether there is an MNPI opportunity included on the NBAC</inlineHelpText>
    <label>MNPI</label>
    <type>Checkbox</type>
</CustomField>