force-app/main/default/objects/Business_Assessment__c/fields/Nature_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Business__c</fullName>
    <description>The nature of the clients business and the relating high-level strategy adopted by the Bank</description>
    <inlineHelpText>The nature of the clients business and the relating high-level strategy adopted by the Bank</inlineHelpText>
    <label>Nature of Business</label>
    <length>650</length>
    <type>LongTextArea</type>
</CustomField>