force-app/main/default/objects/Business_Assessment__c/fields/Nbac_API_Posting_Description__c.field-meta.xml
<CustomField>
    <fullName>Nbac_API_Posting_Description__c</fullName>
    <description>US-4434 - Stores callout success or failures messages</description>
    <label>NBAC API Posting Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>