force-app/main/default/objects/Business_Assessment__c/fields/Nbac_API_Posting_Status__c.field-meta.xml
<CustomField>
    <fullName>Nbac_API_Posting_Status__c</fullName>
    <defaultValue>&quot;Not yet posted&quot;</defaultValue>
    <description>US-4434 - Stores callout success or failures messages</description>
    <label>NBAC API Posting Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>