force-app/main/default/objects/Business_Assessment__c/fields/NBAC_Committee__c.field-meta.xml
<CustomField>
    <fullName>NBAC_Committee__c</fullName>
    <description>The NBAC committee who is responsible for the approval of NBAC Applications.</description>
    <inlineHelpText>The NBAC committee who is responsible for the approval of NBAC Applications.</inlineHelpText>
    <label>NBAC Committee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NBAC_Committee</valueSetName>
    </valueSet>
</CustomField>